welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: reassignment to val
     i=j
      ^max2Value:12: error: not found: value num
  	if((nums(i)>max2) && (nums(i)<num(j))){
                                      ^